这是7月26日的第二个版本，添加了结算跳转页面

--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
   "pages": [
-    
-      "pages/OrderFood/OrderFood",
-   "pages/index/index",
-    "pages/logs/logs"
-  
+    "pages/OrderFood/OrderFood",
+    "pages/index/index",
+    "pages/logs/logs",
+    "pages/balance/balance"
   ],
   "window": {
     "backgroundTextStyle": "light",
