--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.2.0",
 	"appid": "wxc97d30f8b299c6d3",
-	"projectname": "%E7%82%B9%E9%A4%90%E5%B0%8F%E7%A8%8B%E5%BA%8F",
+	"projectname": "%E7%82%B9%E9%A4%90%E7%B3%BB%E7%BB%9Fv1.2",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
